perf(info): fix images overflow when display

--- a/src/renderer/views/item/info/index.scss
+++ b/src/renderer/views/item/info/index.scss
@@ -63,7 +63,7 @@
         flex-direction: row;
       }
       .el-card {
-        width: 90%;
+        width: 92%;
         .el-card__body {
           padding: 10px;
         }
@@ -75,7 +75,7 @@
     .container {
       // margin-left: 8%;
       margin: 0 auto;
-      width: 50%;
+      width: 46%;
     }
   }
   .el-timeline {
